Fix PartitionChangeEvent for Edge and Core while using same ServiceType